# Lovemu

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/themes/: dark.css  light.css
src/: api.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: melonDS.toml
src-tauri/src/: commands.rs  dialogs.rs  discord.rs  downloader.rs  homemenu.rs  launcher.rs  lib.rs  main.rs  melonds.rs  paths.rs  settings.rs  state.rs  switch.rs  sysstatus.rs  systems.rs  threeds.rs  tray.rs  update.rs  util.rs  validate.rs
src/styles/: index.css
src/ui/: console.ts  controllers.ts  data.ts  dom.ts  downloader.ts  help.ts  icons.ts  launcher.ts  scroller.ts  settings.ts  sounds.ts  status.ts  toast.ts  update.ts
