[package]
name = "lovemu"
version = "1.0.0"
description = "Lovemu is an emulator home system launcher."
authors = ["Riyo"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "lovemu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }

reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
lzma-rs = "0.3"
tar = "0.4"

sysinfo = "0.33"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"

discord-rich-presence = "0.2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
starship-battery = "0.10"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
